--- a/style.css
+++ b/style.css
@@ -261,6 +261,12 @@ img {
 .instruments .wrapper .item .bem::after {
   width: 80%;
 }
+.instruments .wrapper .item .ph::after {
+  width: 70%;
+}
+.instruments .wrapper .item .fm::after {
+  width: 85%;
+}
 .instruments .instruments__quote {
   margin-top: 100px;
   border-left: 5px solid #000;
@@ -353,6 +359,14 @@ img {
   transform: scale(0.97);
   background: linear-gradient(0deg, #72a6ff 0%, #3c22ff 100%);
 }
+.callback form #success {
+  color: #1a00dc;
+  font-size: 22px;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 20px;
+  display: none;
+}
 
 @media (max-width: 1023px) {
   .container {
@@ -410,18 +424,19 @@ img {
   .instruments .wrapper .item .icon {
     grid-column: 1/2;
     grid-row: 1/2;
+    width: 50px;
   }
   .instruments .wrapper .item .name {
-    grid-column: 2/4;
+    grid-column: 2/5;
     grid-row: 1/2;
   }
   .instruments .wrapper .item .scale {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 2/3;
     grid: 1/3, 2/3;
   }
   .instruments .wrapper .item .percent {
-    grid-column: 3/4;
+    grid-column: 4/5;
     grid-row: 2/3;
   }
   .header__content .contacts a {
