--- a/style.scss
+++ b/style.scss
@@ -272,6 +272,16 @@ $transition: 0.4s;
                     width: 80%;
                 }
             }
+            .ph{
+                &::after {
+                    width: 70%;
+                }
+            }
+            .fm{
+                &::after {
+                    width: 85%;
+                }
+            }
         }
     }
     .instruments__quote {
@@ -359,6 +369,15 @@ $transition: 0.4s;
                 background: linear-gradient(0deg, #72a6ff 0%, #3c22ff 100%);
             }
         }
+        #success{
+            color: $light-blue;
+            font-size: 22px;
+            font-weight: 500;
+            text-align: center;
+            margin-top: 20px;
+            display: none;
+
+        }
     }
 }
 
@@ -436,18 +455,19 @@ $transition: 0.4s;
                 .icon {
                     grid-column: 1/2;
                     grid-row: 1/2;
+                    width: 50px;
                 }
                 .name {
-                    grid-column: 2/4;
+                    grid-column: 2/5;
                     grid-row: 1/2;
                 }
                 .scale {
-                    grid-column: 1/3;
+                    grid-column: 1/4;
                     grid-row: 2/3;
                     grid: 1/3, 2/3;
                 }
                 .percent {
-                    grid-column: 3/4;
+                    grid-column: 4/5;
                     grid-row: 2/3;
                 }
             }
